[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "python-dotenv>=1.2.2",
    "livekit-api>=1.0.0",
    "livekit-agents[aws,cartesia,deepgram,sarvam,silero,turn-detector]~=1.5",
    "livekit-plugins-noise-cancellation~=0.2",
    "pymongo>=4.16.0",
    "fastapi>=0.135.3",
    "uvicorn>=0.42.0",
    "redis>=7.4.0",
]
